.metals/metals.log
2024.05.05 11:14:43 INFO  Started: Metals version 1.3.0 in folders 'F:\poker' for client Visual Studio Code 1.89.0.
SLF4J: Class path contains multiple SLF4J providers.
SLF4J: Found provider [scribe.slf4j.ScribeServiceProvider@1d52393d]
SLF4J: Found provider [ch.qos.logback.classic.spi.LogbackServiceProvider@429ffc29]
SLF4J: See https://www.slf4j.org/codes.html#multiple_bindings for an explanation.
SLF4J: Actual provider is of type [scribe.slf4j.ScribeServiceProvider@1d52393d]
2024.05.05 11:14:44 WARN  Flyway upgrade recommended: H2 2.2.224 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.220.
2024.05.05 11:14:50 WARN  Build server is not auto-connectable.
2024.05.05 11:15:09 INFO  no build target found for F:\poker\app\controllers\HomeController.scala. Using presentation compiler with project's scala-library version: 3.3.3
2024.05.05 11:15:11 INFO  time: code lens generation in 12s
2024.05.05 11:20:51 INFO  Shutting down server
2024.05.05 11:20:51 INFO  shutting down Metals
2024.05.05 11:20:51 INFO  Exiting server
2024.05.05 11:26:55 INFO  Started: Metals version 1.3.0 in folders 'F:\poker_wapp' for client Visual Studio Code 1.89.0.
SLF4J: Class path contains multiple SLF4J providers.
SLF4J: Found provider [scribe.slf4j.ScribeServiceProvider@4220febe]
SLF4J: Found provider [ch.qos.logback.classic.spi.LogbackServiceProvider@9b5965]
SLF4J: See https://www.slf4j.org/codes.html#multiple_bindings for an explanation.
SLF4J: Actual provider is of type [scribe.slf4j.ScribeServiceProvider@4220febe]
2024.05.05 11:26:55 WARN  Flyway upgrade recommended: H2 2.2.224 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.220.
2024.05.05 11:27:09 WARN  Build server is not auto-connectable.
2024.05.05 11:39:20 INFO  no build target found for F:\poker_wapp\app\controllers\HomeController.scala. Using presentation compiler with project's scala-library version: 3.3.3
Mai 05, 2024 11:39:20 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 14
Mai 05, 2024 11:39:20 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 13
2024.05.05 11:39:22 INFO  time: code lens generation in 10s
2024.05.05 11:39:22 INFO  time: code lens generation in 1.85s
2024.05.05 11:39:22 INFO  time: code lens generation in 1.92s
2024.05.05 11:39:23 WARN  no build target for: F:\poker_wapp\app\controllers\HomeController.scala
2024.05.05 11:39:32 WARN  no build target for: F:\poker_wapp\app\controllers\HomeController.scala
2024.05.05 11:39:36 WARN  no build target for: F:\poker_wapp\app\controllers\HomeController.scala
2024.05.05 11:41:54 WARN  no build target for: F:\poker_wapp\app\controllers\HomeController.scala
2024.05.05 11:49:14 WARN  Could not find semantic tokens for: file:///F:/poker_wapp/project/plugins.sbt
Mai 05, 2024 11:49:22 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 139
Mai 05, 2024 11:49:22 AM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 140
2024.05.05 12:57:14 INFO  Shutting down server
2024.05.05 12:57:14 INFO  shutting down Metals
2024.05.05 12:57:14 INFO  Exiting server
2024.05.05 15:27:10 INFO  Started: Metals version 1.3.0 in folders 'F:\poker_wapp' for client Visual Studio Code 1.89.0.
SLF4J: Class path contains multiple SLF4J providers.
SLF4J: Found provider [scribe.slf4j.ScribeServiceProvider@4ba737ce]
SLF4J: Found provider [ch.qos.logback.classic.spi.LogbackServiceProvider@4e019180]
SLF4J: See https://www.slf4j.org/codes.html#multiple_bindings for an explanation.
SLF4J: Actual provider is of type [scribe.slf4j.ScribeServiceProvider@4ba737ce]
2024.05.05 15:27:10 WARN  Flyway upgrade recommended: H2 2.2.224 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.220.
2024.05.05 15:27:24 INFO  no build target found for F:\poker_wapp\app\controllers\Controller.scala. Using presentation compiler with project's scala-library version: 3.3.3
Mai 05, 2024 3:27:25 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 10
Mai 05, 2024 3:27:25 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 8
2024.05.05 15:33:07 INFO  Shutting down server
2024.05.05 15:33:07 INFO  shutting down Metals
2024.05.05 15:33:07 INFO  Exiting server
2024.05.05 15:34:58 INFO  Started: Metals version 1.3.0 in folders 'F:\poker_wapp' for client Visual Studio Code 1.89.0.
SLF4J: Class path contains multiple SLF4J providers.
SLF4J: Found provider [scribe.slf4j.ScribeServiceProvider@3939280f]
SLF4J: Found provider [ch.qos.logback.classic.spi.LogbackServiceProvider@2c3fda11]
SLF4J: See https://www.slf4j.org/codes.html#multiple_bindings for an explanation.
SLF4J: Actual provider is of type [scribe.slf4j.ScribeServiceProvider@3939280f]
2024.05.05 15:34:58 WARN  Flyway upgrade recommended: H2 2.2.224 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.220.
2024.05.05 15:35:10 INFO  no build target found for F:\poker_wapp\app\controllers\HomeController.scala. Using presentation compiler with project's scala-library version: 3.3.3
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.7.15/scalafmt-core_2.13-3.7.15.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.7.15/scalafmt-core_2.13-3.7.15.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.7.15/scalafmt-sysops_2.13-3.7.15.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.7.15/scalafmt-config_2.13-3.7.15.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.7.15/scalafmt-sysops_2.13-3.7.15.pom
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.7.15/scalafmt-config_2.13-3.7.15.pom
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.7.15/scalafmt-config_2.13-3.7.15.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.7.15/scalafmt-sysops_2.13-3.7.15.jar
Downloading https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.7.15/scalafmt-core_2.13-3.7.15.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-config_2.13/3.7.15/scalafmt-config_2.13-3.7.15.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-sysops_2.13/3.7.15/scalafmt-sysops_2.13-3.7.15.jar
Downloaded https://repo1.maven.org/maven2/org/scalameta/scalafmt-core_2.13/3.7.15/scalafmt-core_2.13-3.7.15.jar
2024.05.05 15:37:36 ERROR scalafmt: F:\poker_wapp\app\model\Cards.scala:9: error: [dialect scala213] identifier expected but case found
  case Two, Three, Four, Five, Six, Seven, Eight, Nine, Ten, Jack, Queen,
  ^
2024.05.05 15:37:36 WARN  no build target for: F:\poker_wapp\app\model\Cards.scala
2024.05.05 15:37:39 ERROR scalafmt: F:\poker_wapp\app\model\Cards.scala:9: error: [dialect scala213] identifier expected but case found
  case Two, Three, Four, Five, Six, Seven, Eight, Nine, Ten, Jack, Queen,
  ^
2024.05.05 15:37:39 WARN  no build target for: F:\poker_wapp\app\model\Cards.scala
2024.05.06 18:46:43 INFO  Started: Metals version 1.3.0 in folders 'C:\Users\Julia\Documents\GitHub\poker_wapp' for client Visual Studio Code 1.89.0.
SLF4J: Class path contains multiple SLF4J providers.
SLF4J: Found provider [scribe.slf4j.ScribeServiceProvider@1d92c290]
SLF4J: Found provider [ch.qos.logback.classic.spi.LogbackServiceProvider@68eb2943]
SLF4J: See https://www.slf4j.org/codes.html#multiple_bindings for an explanation.
SLF4J: Actual provider is of type [scribe.slf4j.ScribeServiceProvider@1d92c290]
2024.05.06 18:46:47 WARN  Flyway upgrade recommended: H2 2.2.224 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.220.
2024.05.06 18:46:56 INFO  running 'C:\Program Files\Java\jre1.8.0_251\bin\java.exe -Djline.terminal=jline.UnsupportedTerminal -Dsbt.log.noformat=true -Dfile.encoding=UTF-8 -jar C:\Users\Julia\AppData\Local\Temp\metals64426530918849170\sbt-launch.jar -Dbloop.export-jar-classifiers=sources bloopInstall'
2024.05.06 18:46:57 ERROR [info] [launcher] getting org.scala-sbt sbt 1.9.9  (this may take some time)...
2024.05.06 18:47:01 INFO  no build target found for C:\Users\Julia\Documents\GitHub\poker_wapp\app\controllers\HomeController.scala. Using presentation compiler with project's scala-library version: 3.3.3
